# Projeto-Final-EMR

./: CMakeLists.txt  bt.xml  deliver-dish-to-kitchen.cpp  deliver-meal-to-table.cpp  deliver-to-table.cpp  fetch-room-for-dishes.cpp  fetch-room.cpp  go-to-kitchen.cpp  go-to-pose.cpp  go-to-recharge-base.cpp  go-to-room.cpp  go-to-waiting-room.cpp  got-right-meal.cpp  is-battery-above-15.cpp  is-pickup-available.cpp  main.cpp  pickup-dish.cpp  pickup-meal.cpp  pickup-meals.cpp  wait-for-call.cpp  wait-for-pickup.cpp
